@@ -10,48 +10,42 @@ package com.powsybl.dynawaltz.models.generators;
 import com.powsybl.dynawaltz.models.VarConnection;
 import com.powsybl.iidm.network.Generator;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 
 import static com.powsybl.dynawaltz.models.utils.BusUtils.getConnectableBusStaticId;
 
 /**
  * @author Dimitri Baudrier <dimitri.baudrier at rte-france.com>
+ * @author Laurent Issertial <laurent.issertial at rte-france.com>
  */
 public class OmegaRefGenerator extends AbstractGeneratorModel implements OmegaRefGeneratorModel {
 
-    private final String generatorLib;
-
     public OmegaRefGenerator(String dynamicModelId, Generator generator, String parameterSetId, String generatorLib) {
-        super(dynamicModelId, generator, parameterSetId,
-                "generator_terminal",
-                "generator_switchOffSignal1",
-                "generator_switchOffSignal2",
-                "generator_switchOffSignal3",
-                "generator_running");
-        this.generatorLib = Objects.requireNonNull(generatorLib);
-    }
-
-    protected String getOmegaRefPuVarName() {
-        return "generator_omegaRefPu";
+        super(dynamicModelId, generator, parameterSetId, generatorLib);
     }
 
     @Override
     public List<VarConnection> getOmegaRefVarConnections() {
-        return Arrays.asList(
+        return List.of(
                 new VarConnection("omegaRef_grp_@INDEX@", getOmegaRefPuVarName()),
                 new VarConnection("running_grp_@INDEX@", getRunningVarName())
         );
     }
 
     @Override
-    public String getConnectableBusId() {
-        return getConnectableBusStaticId(equipment);
+    public List<VarConnection> getSetPointVarConnections() {
+        return List.of(
+                new VarConnection("setPoint_setPoint", getOmegaRefPuVarName())
+        );
     }
 
     @Override
-    public String getLib() {
-        return generatorLib;
+    public String getOmegaRefPuVarName() {
+        return "generator_omegaRefPu";
+    }
+
+    @Override
+    public String getConnectableBusId() {
+        return getConnectableBusStaticId(equipment);
     }
 }
